--- a/index-multiple-account.html
+++ b/index-multiple-account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Whatsapp API by VPoint Indoenesia</title>
+    <title>Whatsapp API by VPoint Indonesia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- This parts is optional, just for improve the styles -->
     <link
@@ -77,7 +77,7 @@
   <body>
     <div id="app">
       <h1>Whatsapp API</h1>
-      <p>Powered by VPoint Indoenesia</p>
+      <p>Powered by VPoint Indonesia</p>
       <div class="form-container">
         <label for="client-id">ID</label><br />
         <input type="text" id="client-id" placeholder="Masukkan ID" />
