--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <div id="app">
       <h1>Whatsapp API</h1>
-      <p>Powered by VPoint Indoenesia</p>
+      <p>Powered by VPoint Indonesia</p>
       <img src="" alt="QR Code" id="qrcode" />
       <h3>Logs:</h3>
       <ul class="logs"></ul>
